--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,5 +1,5 @@
 # Stage 1: Build the React app
-FROM node:18 AS builder
+FROM node:20 AS builder
 
 WORKDIR /app
 
@@ -10,13 +10,9 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Serve the build with Nginx
-FROM nginx:alpine
+FROM nginx:1.25-alpine
 
-# Copy the build from Stage 1
 COPY --from=builder /app/build /usr/share/nginx/html
-
-# Copy custom nginx config (optional)
-# COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
