--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -1,31 +1,23 @@
-name: DAST Scan with OWASP ZAP
+name: OWASP ZAP DAST Scan
 
 on:
   push:
-    branches: [master]  # or use pull_request, schedule, etc.
+    branches: [master]  
 
 jobs:
   zap_scan:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Start Application (example with Docker Compose)
-        run: |
-          docker-compose up -d
-          sleep 30  # Wait for the app to fully start (adjust as needed)
-
-      - name: Run ZAP Full Scan
+      - name: Run ZAP Full Scan on Live App
         uses: zaproxy/action-full-scan@v0.7.0
         with:
-          target: 'https://my-zap-demo.vercel.app' 
-          fail_action: false               
+          target: 'https://my-zap-demo.vercel.app'
+          fail_action: false
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload ZAP Scan Report
+      - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: zap-report
+          name: zap-html-report
           path: report_html.html
