--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   zap_scan:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Run ZAP Full Scan on Live App
