--- a/.github/workflows/CI-test.yml
+++ b/.github/workflows/CI-test.yml
@@ -1,4 +1,4 @@
-name: CI - React Tests on Windows
+name: CI - React Tests on Ubuntu
 
 on:
   push:
@@ -9,18 +9,15 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    runs-on: ubuntu-latest
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm install
 
-      - name: Run tests
-        run: npm test -- --ci --watchAll=false
+      - run: npm test -- --ci --watchAll=false
