--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run ZAP Full Scan on Live App
         uses: zaproxy/action-full-scan@v0.7.0
         with:
-          target: 'https://my-zap-demo.vercel.app'  # 🔁 Replace with your actual URL
+          target: 'https://my-zap-demo.vercel.app' 
           fail_action: false
           create_issue: true
           token: ${{ secrets.GITHUB_TOKEN }}
