--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test:e2e": "playwright test"
+    "test": "playwright test"
   },
   "author": "You",
   "license": "MIT",
