--- a/.github/workflows/CI-test.yml
+++ b/.github/workflows/CI-test.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           node-version: 18
 
-      - run: npm install
+      - run: npm ci
 
-      - run: npm test
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npm test
