--- a/.github/workflows/dependable_bot.yml
+++ b/.github/workflows/dependable_bot.yml
@@ -1,6 +1,5 @@
 name: Dependabot + Security Validation
 
-# Trigger on Dependabot PRs and also manual / schedule if desired
 on:
   pull_request:
     types: [opened, reopened, synchronize]
@@ -15,7 +14,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  # Job to run tests & build after dependency update
   build_and_test:
     runs-on: ubuntu-latest
     steps:
@@ -23,19 +21,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up environment / install dependencies
-        # adjust for your stack, e.g. Node, Java, Python, etc.
         run: |
-          # e.g. for Node.js
           npm ci
-        # or for Python, Java, etc.
+
+      - name: Install Playwright Browsers
+        run: |
+          npx playwright install --with-deps
 
       - name: Run tests
         run: |
-          # run your unit / integration tests
           npm test
-      # optionally upload test results, coverage etc
 
-  # Job to scan with ZAP or other security tool, only if build_and_test succeeded
   zap_scan:
     needs: build_and_test
     runs-on: ubuntu-latest
@@ -44,14 +40,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start local server
-        # If your app runs (for example) via a dev server on port 3000
         run: |
-          # e.g. npm start & background
           npm start &
 
       - name: Wait for server ready
         run: |
-          # simple wait or health-check loop
           n=0
           until $(curl --output /dev/null --silent --head --fail http://127.0.0.1:3000); do
             n=$((n + 1))
@@ -67,7 +60,6 @@ jobs:
         with:
           target: 'http://127.0.0.1:3000'
           docker_name: 'owasp/zap2docker-stable'
-          # optionally set rules, thresholds, etc
           allow_issue_writing: false
 
       - name: Stop server
@@ -78,9 +70,8 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: zap-report
-          path: ./zap-report*  # adjust pattern as per output
+          path: ./zap-report*
 
-  # Optionally, job to merge the Dependabot PR if everything passes
   auto_merge:
     needs: [build_and_test, zap_scan]
     runs-on: ubuntu-latest
