--- a/.github/workflows/cypress.config.yml
+++ b/.github/workflows/cypress.config.yml
@@ -1,12 +1,36 @@
-# cypress.config.yml
-baseUrl: "https://my-zap-demo.vercel.app"
-integrationFolder: "cypress/integration"
-fixturesFolder: "cypress/fixtures"
-screenshotsFolder: "cypress/screenshots"
-videosFolder: "cypress/videos"
-reporter: "mochawesome"
-reporterOptions:
-  reportDir: "cypress/reports"
-  overwrite: false
-  html: true
-  json: true
+name: E2E Tests
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
+jobs:
+  cypress-run:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Cypress tests
+        run: npx cypress run --config baseUrl=https://my-zap-demo.vercel.app
+
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-results
+          path: |
+            cypress/videos
+            cypress/screenshots
+            cypress/reports
