--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",  
-    "test:e2e": "cypress run --config baseUrl=https://my-zap-demo.vercel.app"
+    "test:e2e": "cypress run --config baseUrl=https://my-zap-demo.vercel.app",
     "test": "playwright test"
   },
   "author": "You",
